# meliuz-ab-test-ops-analises

./: .gitignore  AGENTS.md  README.md  prompt_relatorio.md  pyproject.toml  requirements.txt
relatorios/: Resultados_Testes_AB_Meliuz.xlsx  acompanhamento_testes.csv
relatorios/dataset_01_parceiroa__parceiro_a/: comparacoes_estatisticas.csv  contexto_llm.json  economia_incremental.csv  fases.csv  relatorio.md  resumo_variantes.csv
relatorios/dataset_02_parceirob__parceiro_b/: comparacoes_estatisticas.csv  contexto_llm.json  economia_incremental.csv  fases.csv  relatorio.md  resumo_variantes.csv
relatorios/dataset_03_parceiroc__parceiro_c/: comparacoes_estatisticas.csv  contexto_llm.json  economia_incremental.csv  fases.csv  relatorio.md  resumo_variantes.csv
src/analise_ab/: __init__.py  __main__.py  analise.py  pipeline.py  planilha.py  relatorio.py
