[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analise-ab-meliuz"
version = "1.0.0"
description = "Analise reutilizavel de testes A/B de cashback"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3",
    "openpyxl>=3.1,<4",
    "pandas>=2.1,<3",
]

[project.scripts]
analisar-testes-ab = "analise_ab.pipeline:executar"

[tool.setuptools.packages.find]
where = ["src"]
